# homwork-38

blur/: CMakeLists.txt  blur.cpp  img.qrc  qrc_img.cpp
button/: CMakeLists.txt  button.cpp  qrc_res.cpp  res.qrc
html/: CMakeLists.txt  HtmlCodeForTest.txt  html.cpp
